--- a/class2.html
+++ b/class2.html
@@ -25,13 +25,13 @@
    
     <div class="div">
 
-        <div style="display:flex;  width: 15%; justify-content: center; align-items: center;" >
+        <div style="display:flex;  width: 15%; justify-content: flex-start; align-items: flex-start; margin-left: 5px;" >
             <img src="camera.png" alt="" width="25px" height="25px">
         </div>
-        <div style=" display: flex;  justify-content: center; align-items: center; width: 70%">
+        <div style=" display: flex;  justify-content: center; align-items: flex-start; width: 70%">
                 <img src="text.png" alt="" width="100px" height="36px">
             </div>
-            <div style="display: flex; justify-content: center; align-items: center;  width: 15%">
+            <div style="display: flex; justify-content: flex-end; align-items: flex-start; margin-left: 5px;  width: 15%">
                     <img src="msg.png" alt="" width="25px" height="25px">
                 </div>
 
